--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -137,5 +137,16 @@ ul.vaccine-list li::before {
   top: 3px;
   width: 1.2rem;
   height: 1.2rem;
-  background-image: url("data:image/svg+xml,%3Csvg fill='%23cbe7ed' width='20px' height='20px' viewBox='0 0 24 24' id='medical-insurance' data-name='Line Color' xmlns='http://www.w3.org/2000/svg' class='icon line-color'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath id='secondary' d='M12,14V10m2,2H10' style='fill: none; stroke: %23cbe7ed; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;'%3E%3C/path%3E%3Cpath id='primary' d='M19,5a1,1,0,0,1,1,1V9.54a12.31,12.31,0,0,1-7.61,11.38,1,1,0,0,1-.78,0A12.31,12.31,0,0,1,4,9.54V6A1,1,0,0,1,5,5a12.6,12.6,0,0,0,7-2A12.6,12.6,0,0,0,19,5Z' style='fill: none; stroke: %23cbe7ed; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg fill='%231F778A' width='20px' height='20px' viewBox='0 0 24 24' id='medical-insurance' data-name='Line Color' xmlns='http://www.w3.org/2000/svg' class='icon line-color'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath id='secondary' d='M12,14V10m2,2H10' style='fill: none; stroke: %23a2d6e2; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;'%3E%3C/path%3E%3Cpath id='primary' d='M19,5a1,1,0,0,1,1,1V9.54a12.31,12.31,0,0,1-7.61,11.38,1,1,0,0,1-.78,0A12.31,12.31,0,0,1,4,9.54V6A1,1,0,0,1,5,5a12.6,12.6,0,0,0,7-2A12.6,12.6,0,0,0,19,5Z' style='fill: none; stroke: %23a2d6e2; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+}
+
+ul.vaccine-list li.potential::before {
+  position: absolute;
+  content: "";
+  background-repeat: no-repeat;
+  left: 0;
+  top: 3px;
+  width: 1.2rem;
+  height: 1.2rem;
+  background-image: url("data:image/svg+xml,%3Csvg fill='%23fdba74' width='20px' height='20px' viewBox='0 0 24 24' id='medical-insurance' data-name='Line Color' xmlns='http://www.w3.org/2000/svg' class='icon line-color'%3E%3Cg id='SVGRepo_bgCarrier' stroke-width='0'%3E%3C/g%3E%3Cg id='SVGRepo_tracerCarrier' stroke-linecap='round' stroke-linejoin='round'%3E%3C/g%3E%3Cg id='SVGRepo_iconCarrier'%3E%3Cpath id='secondary' d='M12,14V10m2,2H10' style='fill: none; stroke: %23f0c393; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;'%3E%3C/path%3E%3Cpath id='primary' d='M19,5a1,1,0,0,1,1,1V9.54a12.31,12.31,0,0,1-7.61,11.38,1,1,0,0,1-.78,0A12.31,12.31,0,0,1,4,9.54V6A1,1,0,0,1,5,5a12.6,12.6,0,0,0,7-2A12.6,12.6,0,0,0,19,5Z' style='fill: none; stroke: %23f0c393; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
 }
